--- a/plan.html
+++ b/plan.html
@@ -28,6 +28,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="images/cossieplayhierarchy.png" alt="Site Flowchart"> ... </p>
 <h2>GitHub Repository</h2>
-<p><a href="http://github.com/...">Enter your repo name and link it here</a></p>
+<p><a href="https://github.com/TomStanley95/a1-Cossieplay">a1-Cossieplay</a></p>
 </body>
 </html>
